added mobile menu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<header class="header">
 
 			<div id="banner" class="banner">
+				<input id="toggle" type="checkbox" class="navToggle">
+				<label for="toggle" class="menuToggle">
+					<span></span><span></span><span></span>
+				</label>
 				<h1 class="banner-title">
 					<!-- Title<small>tag Line</small> -->
 					edBastarache.com
@@ -21,10 +25,11 @@
 						allThings ed!
 					</small>
 				</h1>
+
 				<nav>
 					<ul class="navList">
-						<li class="navItem"> <a href="#portfolio"><span class="text">portfolio</span><i
-									class="fas fa-lg fa-briefcase"></i></a></li>
+						<li class="navItem">
+							<a href="#portfolio"><span class="text">portfolio</span><i class="fas fa-lg fa-briefcase"></i></a></li>
 						<li class="navItem"> <a href="#uxuidesign"><span class="text">ux/ui & design</span><i
 									class="fas fa-lg fa-drafting-compass"></i></a></li>
 						<li class="navItem"> <a href="#homeAutomation"><span class="text">homeAutomation</span><i
@@ -42,7 +47,6 @@
 				</svg>
 
 			</div>
-
 
 		</header>
 
